spade-tests/src/snapshots/spade_tests__typeinference__comb_mod_produces_number.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() -> bool {
    true `std::ops::comb_mod` true
}


error: Argument type mismatch. Expected Number<_> got bool
    ┌─ testinput:2:5
    │
  2 │     true `std::ops::comb_mod` true
    │     ^^^^ expected Number<_>
    │
    ┌─ <compiler dir>/stdlib/ops.spade:104:20
    │
104 │ extern fn comb_mod<N>(x: N, y: N) -> N;
    │                    - Type Number<_> inferred here
    │
    = note: Expected: Number<_>
                 Got: bool
